--- a/src/app/sidebar/item-menu/item-menu.component.html
+++ b/src/app/sidebar/item-menu/item-menu.component.html
@@ -1,1 +1,7 @@
-<p>item-menu works!</p>
+<label>
+    <input [value]="value" name="item-menu" type="radio">
+    <div>
+        <span></span>
+        <span></span>
+    </div>
+</label>
