--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-sidebar></app-sidebar>
-<app-main></app-main>
+<div class="app-wrapper">
+    <app-sidebar></app-sidebar>
+    <app-main></app-main>
+</div>
