Стили sidebar, логика смены разделов

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="app-wrapper">
-    <app-sidebar></app-sidebar>
-    <app-main></app-main>
+    <app-sidebar [(currentSection)]="currentSection" ></app-sidebar>
+    <!-- <app-main [currentSection]="currentSection" ></app-main> -->
 </div>
