Базовые стили main

--- a/src/app/main/analytics/analytics.component.html
+++ b/src/app/main/analytics/analytics.component.html
@@ -1,2 +1,8 @@
-<p>analytics works!</p>
-<app-analytical-point></app-analytical-point>
+<!-- <app-analytical-point></app-analytical-point> -->
+<div class="main">
+    <div class="main-header">
+        <h3 class="title">Аналитика </h3>
+    </div>
+    <hr class="hr">
+    <div class="main-body"></div>
+</div>
