--- a/src/app/main/categories/categories.component.html
+++ b/src/app/main/categories/categories.component.html
@@ -1,2 +1,16 @@
-<p>categories works!</p>
-<app-category></app-category>
+<!-- <p class="main-title">categories works!</p> -->
+<!-- <app-category></app-category> -->
+<div class="main">
+    <div class="main-header">
+        <h3 class="title">Расходы</h3>
+        <button class="btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
+                <path d="M7 1L7 13" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                <path d="M1 7L13 7" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+            </svg>
+            <span>Добавить категорию</span>
+        </button>
+    </div>
+    <hr class="hr">
+    <div class="main-body"></div>
+</div>
