--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,6 +36,7 @@ ol[role='list'] {
 body {
     height: 100vh;
     line-height: 1.5;
+    font-family: Inter, sans-serif;
 }
 
 /* Set shorter line heights on headings and interactive elements */
