--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<div [ngSwitch]="currentSection">
+<div class="main-wrapper" [ngSwitch]="currentSection">
     <app-categories *ngSwitchCase="'categories'" ></app-categories>
     <app-operations *ngSwitchCase="'operations'" ></app-operations>
     <app-analytics *ngSwitchCase="'analytics'" ></app-analytics>
