Продумывание архитектуры данных

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
+<!-- <button (click)="mapShow()">Show map</button>
+<div>
+    <span *ngFor=" let item of this.myStore.values()"> {{ item[0].comment }} {{ item[0].sum }} </span>
+</div> -->
 <div class="app-wrapper">
-    <app-sidebar [(currentSection)]="currentSection" ></app-sidebar>
+    <app-sidebar [myStore]="myStore" [(currentSection)]="currentSection" ></app-sidebar>
     <app-main [currentSection]="currentSection" ></app-main>
-</div>
+</div>`
