--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <section class="sidebar-wrapper">
     <div class="sidebar">
-        <button class="addOperation-btn">
+        <button class="addOperation-btn" (click)="changeData()">
             <span class="addOperation-btn__lable"></span>
             <span class="addOperation-btn__title">Добавить операцию</span>
         </button>
