--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,10 +1,10 @@
 <section class="sidebar-wrapper">
     <div class="sidebar">
-        <button class="addOperation-btn" (click)="changeData()">
+        <button class="addOperation-btn">
             <span class="addOperation-btn__lable"></span>
             <span class="addOperation-btn__title">Добавить операцию</span>
         </button>
-    
+
         <nav (change)="changeCurrentSection( $event )">
             <app-item-menu [checked]="true" value="categories">Категории</app-item-menu>
             <app-item-menu value="operations">Операции</app-item-menu>
