Логика добавления категории

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="app-wrapper">
     <app-sidebar (onCurrentSection)="changeCurrentSection( $event ) " ></app-sidebar>
-    <app-main [currentSection]="currentSection" ></app-main>
+    <app-main [myStore]="myStore" [currentSection]="currentSection" ></app-main>
 </div>`
