--- a/src/app/main/categories/categories.component.html
+++ b/src/app/main/categories/categories.component.html
@@ -1,9 +1,8 @@
-<!-- <p class="main-title">categories works!</p> -->
-<!-- <app-category></app-category> -->
+<app-adding-category [(isActivePopup)]="isActivePopup" (onAddCategory)="addCategory( $event )"></app-adding-category>
 <div class="main">
     <div class="main-header">
         <h3 class="title">Расходы</h3>
-        <button class="btn">
+        <button class="btn" (click)="isActivePopup = true">
             <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
                 <path d="M7 1L7 13" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                 <path d="M1 7L13 7" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
@@ -12,5 +11,9 @@
         </button>
     </div>
     <hr class="hr">
-    <div class="main-body"></div>
+    <div class="main-body">
+        @for ( key of myStore?.keys(); track key){
+            <div>{{key}}</div>
+        }
+    </div>
 </div>
