--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,19 +1,15 @@
-<!--<div class="main-wrapper" [ngSwitch]="currentSection">-->
-<!--    <app-categories *ngSwitchCase="'categories'" ></app-categories>-->
-<!--    <app-operations *ngSwitchCase="'operations'" ></app-operations>-->
-<!--    <app-analytics *ngSwitchCase="'analytics'" ></app-analytics>-->
-<!--</div>-->
+
 <div class="main-wrapper">
-  @switch (currentSection) {
-    @case ('categories') {
-      <app-categories></app-categories>
+    @switch (currentSection) {
+        @case ('categories') {
+            <app-categories [myStore]="myStore"></app-categories>
+        }
+        @case ('operations') {
+            <app-operations></app-operations>
+        }
+        @case ('analytics') {
+            <app-analytics></app-analytics>
+        }
     }
-    @case ('operations') {
-      <app-operations></app-operations>
-    }
-    @case ('analytics') {
-      <app-analytics></app-analytics>
-    }
-  }
 </div>
 
