--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -26,7 +26,7 @@
         background-color: #F4F7FA;
     }
 }
-.addOperation-btn__lable{
+.addOperation-btn__label{
     width: 35px;
     height: 35px;
     background-color: #858C9B;
