--- a/src/app/main/categories/categories.component.scss
+++ b/src/app/main/categories/categories.component.scss
@@ -1,4 +1,39 @@
 @import '../main-mixins.component.scss';
+:host {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height:100%;
+}
 .main {
+    display: flex;
+    flex-direction: column;
     @include main-header-styles;
+    height: 100%;
+}
+.main-body {
+    grid-template-columns: repeat(auto-fill, 101px);
+    grid-template-rows:repeat(auto-fill, 123px);
+    gap: 25px;
+    height: 100%;
+    overflow-y: scroll;
+    &.grid {
+        display: grid;
+    }
+    &.block {
+        display: block;
+    }
+}
+
+.simple-body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    background-color: #F5F6F7;
+    color: #737373;
+    font-size: 30px;
+    font-weight: 700;
+    border-radius: 5px;
 }
