--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -5,7 +5,7 @@
             <app-categories [myStore]="myStore"></app-categories>
         }
         @case ('operations') {
-            <app-operations></app-operations>
+            <app-operations [myStore]="myStore"></app-operations>
         }
         @case ('analytics') {
             <app-analytics></app-analytics>
