--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,7 +1,11 @@
+<app-adding-operation
+    [myStore]="myStore"
+    [(isActivePopup)]="isActivePopup"
+></app-adding-operation>
 <section class="sidebar-wrapper">
     <div class="sidebar">
-        <button class="addOperation-btn">
-            <span class="addOperation-btn__lable"></span>
+        <button class="addOperation-btn" (click)="isActivePopup = true">
+            <span class="addOperation-btn__label"></span>
             <span class="addOperation-btn__title">Добавить операцию</span>
         </button>
 
