--- a/src/styles.scss
+++ b/src/styles.scss
@@ -88,3 +88,23 @@ textarea:not([rows]) {
 :target {
     scroll-margin-block: 5ex;
 }
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+.custom-scrolling {
+    scrollbar-color: rgba(0, 0, 0, 0.10) #fff;
+    scrollbar-width: thin;
+    &::-webkit-scrollbar {
+        width: 5px;
+    }
+    &::-webkit-scrollbar-thumb {
+        border-radius: 2px;
+        background-color: rgba(0, 0, 0, 0.10);
+    }
+}
+
